Change text color in CSS for search and textarea

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ body{margin:0;background:#fff;color:#111}
 header{position:sticky;top:0;z-index:10;background:#fff;border-bottom:1px solid #eee;padding:16px}
 .header-inner{max-width:720px;margin:0 auto;display:flex;flex-direction:column;gap:12px}
 h1{margin:0;font-size:22px;font-weight:bold;color:#00b3b3}
-.search{width:100%;padding:10px 12px;border:1px solid #ddd;border-radius:6px;font-size:16px;outline:none;appearance:none;color:#737373}
+.search{width:100%;padding:10px 12px;border:1px solid #ddd;border-radius:6px;font-size:16px;outline:none;appearance:none;color:#2F2F2F}
 .search::placeholder{color:#a0a0a0}
 .search:focus,.search:focus-visible{border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)}
 .post-box{border:1px solid #ddd;border-radius:8px;padding:12px;transition:box-shadow .2s}
 .post-box:focus-within{border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)}
-textarea{width:100%;border:none;resize:none;outline:none;font-size:16px;line-height:1.5;min-height:44px;max-height:300px;color:#737373}
+textarea{width:100%;border:none;resize:none;outline:none;font-size:16px;line-height:1.5;min-height:44px;max-height:300px;color:#2F2F2F}
 textarea::placeholder{color:#a0a0a0}
 .post-actions{display:flex;justify-content:space-between;align-items:center;margin-top:8px}
 .counter{font-size:12px;color:#888}
@@ -25,7 +25,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 main{max-width:720px;margin:0 auto;padding:16px;display:flex;flex-direction:column;gap:12px}
 .joke{border:1px solid #eee;border-radius:8px;padding:12px;cursor:pointer;transition:background .2s}
 .joke:hover{background:#fafafa}
-.joke-text{font-size:14px;white-space:pre-wrap;overflow:hidden;transition:max-height .3s ease;color:#737373}
+.joke-text{font-size:14px;white-space:pre-wrap;overflow:hidden;transition:max-height .3s ease;color:#2F2F2F}
 .more{margin-top:6px;font-size:12px;color:#00b3b3;cursor:pointer;user-select:none}
 .joke-footer{display:flex;justify-content:space-between;align-items:center;margin-top:10px;gap:10px}
 .vote{font-size:13px;font-weight:bold;color:#00b3b3;cursor:pointer;user-select:none}
