--- a/index.html
+++ b/index.html
@@ -8,28 +8,84 @@
 html{-webkit-text-size-adjust:100%;text-size-adjust:100%}
 *{box-sizing:border-box;font-family:Arial,sans-serif}
 body{margin:0;background:#fff;color:#111}
+
 header{position:sticky;top:0;z-index:10;background:#fff;border-bottom:1px solid #eee;padding:16px}
-.header-inner{max-width:720px;margin:0 auto;display:flex;flex-direction:column;gap:12px}
+.header-inner{max-width:800px;margin:0 auto;display:flex;flex-direction:column;gap:12px}
+
 h1{margin:0;font-size:22px;font-weight:bold;color:#00b3b3}
-.search{width:100%;padding:10px 12px;border:1px solid #ddd;border-radius:6px;font-size:16px;outline:none;appearance:none;color:#2F2F2F}
-.search::placeholder{color:#a0a0a0}
-.search:focus,.search:focus-visible{border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)}
-.post-box{border:1px solid #ddd;border-radius:8px;padding:12px;transition:box-shadow .2s}
-.post-box:focus-within{border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)}
-textarea{width:100%;border:none;resize:none;outline:none;font-size:16px;line-height:1.5;min-height:44px;max-height:300px;color:#2F2F2F}
-textarea::placeholder{color:#a0a0a0}
-.post-actions{display:flex;justify-content:space-between;align-items:center;margin-top:8px}
+
+.search{
+width:100%;padding:10px 12px;border:1px solid #ddd;border-radius:6px;
+font-size:16px;outline:none;appearance:none;color:#515151
+}
+.search::placeholder{color:#9a9a9a}
+.search:focus,.search:focus-visible{
+border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)
+}
+
+.post-box{
+border:1px solid #ddd;border-radius:8px;padding:12px;transition:box-shadow .2s
+}
+.post-box:focus-within{
+border-color:#00b3b3;box-shadow:0 0 0 2px rgba(0,179,179,.25)
+}
+
+textarea{
+width:100%;border:none;resize:none;outline:none;
+font-size:16px;line-height:1.5;
+min-height:44px;max-height:300px;
+color:#515151
+}
+textarea::placeholder{color:#9a9a9a}
+
+.post-actions{
+display:flex;justify-content:space-between;align-items:center;margin-top:8px
+}
 .counter{font-size:12px;color:#888}
-button{background:#00b3b3;color:#fff;border:none;border-radius:6px;padding:8px 14px;font-size:13px;cursor:pointer}
+
+button{
+background:#00b3b3;color:#fff;border:none;border-radius:6px;
+padding:8px 14px;font-size:13px;cursor:pointer
+}
 button:disabled{opacity:.5;cursor:not-allowed}
-main{max-width:720px;margin:0 auto;padding:16px;display:flex;flex-direction:column;gap:12px}
-.joke{border:1px solid #eee;border-radius:8px;padding:12px;cursor:pointer;transition:background .2s}
+
+main{
+max-width:800px;margin:0 auto;padding:16px;
+display:flex;flex-direction:column;gap:12px
+}
+
+.feed-rule{
+width:100%;border:none;border-top:1px solid #eee;margin:0
+}
+
+.joke{
+border:1px solid #eee;border-radius:8px;padding:12px;
+cursor:pointer;transition:background .2s
+}
 .joke:hover{background:#fafafa}
-.joke-text{font-size:14px;white-space:pre-wrap;overflow:hidden;transition:max-height .3s ease;color:#2F2F2F}
-.more{margin-top:6px;font-size:12px;color:#00b3b3;cursor:pointer;user-select:none}
-.joke-footer{display:flex;justify-content:space-between;align-items:center;margin-top:10px;gap:10px}
-.vote{font-size:13px;font-weight:bold;color:#00b3b3;cursor:pointer;user-select:none}
+
+.joke-text{
+font-size:14px;white-space:pre-wrap;
+overflow:hidden;transition:max-height .3s ease;
+color:#515151
+}
+
+.more{
+margin-top:6px;font-size:12px;color:#00b3b3;
+cursor:pointer;user-select:none
+}
+
+.joke-footer{
+display:flex;justify-content:space-between;align-items:center;
+margin-top:10px;gap:10px
+}
+
+.vote{
+font-size:13px;font-weight:bold;color:#00b3b3;
+cursor:pointer;user-select:none
+}
 .vote.disabled{opacity:.4;cursor:not-allowed}
+
 .meta{font-size:12px;color:#888;user-select:none}
 </style>
 </head>
@@ -78,7 +134,10 @@ postBtn.addEventListener("click",async()=>{
 const text=input.value.trim();
 if(!text)return;
 postBtn.disabled=true;
-await fetch("/.netlify/functions/post-joke",{method:"POST",headers:{"content-type":"application/json"},body:JSON.stringify({text})}).catch(()=>{});
+await fetch("/.netlify/functions/post-joke",{
+method:"POST",headers:{"content-type":"application/json"},
+body:JSON.stringify({text})
+}).catch(()=>{});
 input.value="";count.textContent="0";input.style.height="44px";
 await load(true);
 });
@@ -90,7 +149,9 @@ loading=true;
 try{
 const res=await fetch("/.netlify/functions/get-jokes",{cache:"no-store"});
 const data=await res.json();
-if(data&&data.jokes&&typeof data.jokes==="object"){jokes=data.jokes;persistJokes();render();}
+if(data&&data.jokes&&typeof data.jokes==="object"){
+jokes=data.jokes;persistJokes();render();
+}
 lastLoadAt=Date.now();
 }catch{}
 loading=false;
@@ -104,13 +165,22 @@ function isLive(j){return j&&j.deleted!==true&&typeof j.text==="string"&&j.text.
 function render(){
 list.innerHTML="";
 const term=(search.value||"").toLowerCase(),now=Date.now();
-const visible=Object.entries(jokes).filter(([_,j])=>isLive(j)&&(!term||j.text.toLowerCase().includes(term)));
-const recent=visible.filter(([_,j])=>now-(j.ts||0)<=NEW_WINDOW).sort((a,b)=>(b[1].ts||0)-(a[1].ts||0));
+const visible=Object.entries(jokes)
+.filter(([_,j])=>isLive(j)&&(!term||j.text.toLowerCase().includes(term)));
+
+const recent=visible
+.filter(([_,j])=>now-(j.ts||0)<=NEW_WINDOW)
+.sort((a,b)=>(b[1].ts||0)-(a[1].ts||0));
+
 const recentIds=new Set(recent.map(([id])=>id));
-const ranked=visible.filter(([id])=>!recentIds.has(id)).sort((a,b)=>{
+
+const ranked=visible
+.filter(([id])=>!recentIds.has(id))
+.sort((a,b)=>{
 const sb=b[1].score||0,sa=a[1].score||0;
 return sb!==sa?sb-sa:(b[1].ts||0)-(a[1].ts||0);
 });
+
 const feed=[...recent,...ranked].slice(0,HOME_LIMIT);
 
 for(const[id,j]of feed){
@@ -121,10 +191,14 @@ text.textContent=preview+(expandable?"…":"");text.style.maxHeight="6em";
 const more=document.createElement("div");more.className="more";more.textContent="More";
 if(!expandable)more.style.display="none";
 let open=false;
-const toggle=()=>{open=!open;text.textContent=open?full:(preview+(expandable?"…":""));
-text.style.maxHeight=open?"1000px":"6em";more.textContent=open?"Less":"More"};
+const toggle=()=>{open=!open;
+text.textContent=open?full:(preview+(expandable?"…":""));
+text.style.maxHeight=open?"1000px":"6em";
+more.textContent=open?"Less":"More";
+};
 card.addEventListener("click",toggle);
 more.addEventListener("click",e=>{e.stopPropagation();toggle()});
+
 const footer=document.createElement("div");footer.className="joke-footer";
 const vote=document.createElement("div");
 vote.className="vote"+(votes[id]?" disabled":"");
@@ -133,11 +207,17 @@ vote.addEventListener("click",async e=>{
 e.stopPropagation();if(votes[id])return;
 votes[id]=true;persistVotes();
 j.score=(j.score||0)+1;persistJokes();render();
-await fetch("/.netlify/functions/vote-joke",{method:"POST",headers:{"content-type":"application/json"},body:JSON.stringify({id})}).catch(()=>{});
+await fetch("/.netlify/functions/vote-joke",{
+method:"POST",headers:{"content-type":"application/json"},
+body:JSON.stringify({id})
+}).catch(()=>{});
 load(true);
 });
-const meta=document.createElement("div");meta.className="meta";
+
+const meta=document.createElement("div");
+meta.className="meta";
 meta.textContent=now-(j.ts||0)<=NEW_WINDOW?"New":"";
+
 footer.append(vote,meta);
 card.append(text,more,footer);
 list.append(card);
