--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,9 @@
-<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script><script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script></head><body></body></html>
+<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script><script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script></head><body><script>
+if(window.netlifyIdentity){
+window.netlifyIdentity.on("init",user=>{
+if(!user){
+window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})
+}
+})
+}
+</script></body></html>
